src/objects/Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount_if_applicable_Dollar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ Discount (if applicable)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_if_applicable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% Discount (if applicable)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>(Case__r.Tax__c  /  Case__r.Total_Merchandise__c ) *  Product_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Item</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <recordTypes>
        <fullName>Single_Item_order</fullName>
        <active>true</active>
        <label>Single Item order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Total_order</fullName>
        <active>true</active>
        <label>Total order</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>